packages/typ/tests/fixtures/diagnostics/0095_core_pattern_annotation_mismatch_08.ml.expected
File "0095_core_pattern_annotation_mismatch_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0095_core_pattern_annotation_mismatch_08 is not a valid module name.

File "0095_core_pattern_annotation_mismatch_08.ml", line 1, characters 37-38:
1 | let ((theta : bool), other_theta) = (7, 8)
                                         ^
Error: The constant 7 has type int but an expression was expected of type
         bool
